// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioPill Snapshots RadioPillItem no children 1`] = `
<div
  className="sc-bdfBwQ jfeFEr"
>
  <div
    className="sc-hKgILt kthtYg"
  >
    <input
      className="sc-dlfnbm czFtKV"
      defaultChecked={false}
      disabled={false}
      onChange={null}
      type="radio"
      value=""
    />
    <label
      className="sc-gsTCUz hA-DzkU"
    />
  </div>
  <div
    className="sc-hKgILt kthtYg"
  >
    <input
      className="sc-dlfnbm czFtKV"
      defaultChecked={false}
      disabled={false}
      onChange={null}
      type="radio"
      value=""
    />
    <label
      className="sc-gsTCUz hA-DzkU"
    />
  </div>
  <div
    className="sc-hKgILt kthtYg"
  >
    <input
      className="sc-dlfnbm czFtKV"
      defaultChecked={false}
      disabled={false}
      onChange={null}
      type="radio"
      value=""
    />
    <label
      className="sc-gsTCUz hA-DzkU"
    />
  </div>
</div>
`;

exports[`RadioPill Snapshots RadioPillItem no props 1`] = `
<div
  className="sc-bdfBwQ jfeFEr"
>
  <div
    className="sc-hKgILt kthtYg"
  >
    <input
      className="sc-dlfnbm czFtKV"
      defaultChecked={false}
      disabled={false}
      onChange={null}
      type="radio"
      value=""
    />
    <label
      className="sc-gsTCUz hA-DzkU"
    >
      1
    </label>
  </div>
  <div
    className="sc-hKgILt kthtYg"
  >
    <input
      className="sc-dlfnbm czFtKV"
      defaultChecked={false}
      disabled={false}
      onChange={null}
      type="radio"
      value=""
    />
    <label
      className="sc-gsTCUz hA-DzkU"
    >
      2
    </label>
  </div>
  <div
    className="sc-hKgILt kthtYg"
  >
    <input
      className="sc-dlfnbm czFtKV"
      defaultChecked={false}
      disabled={false}
      onChange={null}
      type="radio"
      value=""
    />
    <label
      className="sc-gsTCUz hA-DzkU"
    >
      3 +
    </label>
  </div>
</div>
`;

exports[`RadioPill Snapshots Standard 1`] = `
<div
  className="sc-bdfBwQ jfeFEr"
>
  <div
    className="sc-hKgILt kthtYg"
  >
    <input
      className="sc-dlfnbm czFtKV"
      defaultChecked={true}
      disabled={false}
      id="221e98j"
      name="Radiopills"
      onChange={null}
      type="radio"
      value={1}
    />
    <label
      className="sc-gsTCUz hA-DzkU"
      htmlFor="221e98j"
    >
      1
    </label>
  </div>
  <div
    className="sc-hKgILt kthtYg"
  >
    <input
      className="sc-dlfnbm czFtKV"
      defaultChecked={false}
      disabled={false}
      id="ads31"
      name="Radiopills"
      onChange={null}
      type="radio"
      value={2}
    />
    <label
      className="sc-gsTCUz hA-DzkU"
      htmlFor="ads31"
    >
      2
    </label>
  </div>
  <div
    className="sc-hKgILt kthtYg"
  >
    <input
      className="sc-dlfnbm czFtKV"
      defaultChecked={false}
      disabled={false}
      id="h14"
      name="Radiopills"
      onChange={null}
      type="radio"
      value={3}
    />
    <label
      className="sc-gsTCUz hA-DzkU"
      htmlFor="h14"
    >
      3 +
    </label>
  </div>
</div>
`;

exports[`RadioPill Snapshots no children 1`] = `
<div
  className="sc-bdfBwQ jfeFEr"
/>
`;

exports[`RadioPill Snapshots no group 1`] = `
<div
  className="sc-bdfBwQ jfeFEr"
>
  <div
    className="sc-hKgILt kthtYg"
  >
    <input
      className="sc-dlfnbm czFtKV"
      defaultChecked={true}
      disabled={false}
      id="221e98j"
      onChange={null}
      type="radio"
      value={1}
    />
    <label
      className="sc-gsTCUz hA-DzkU"
      htmlFor="221e98j"
    >
      1
    </label>
  </div>
  <div
    className="sc-hKgILt kthtYg"
  >
    <input
      className="sc-dlfnbm czFtKV"
      defaultChecked={false}
      disabled={false}
      id="ads31"
      onChange={null}
      type="radio"
      value={2}
    />
    <label
      className="sc-gsTCUz hA-DzkU"
      htmlFor="ads31"
    >
      2
    </label>
  </div>
  <div
    className="sc-hKgILt kthtYg"
  >
    <input
      className="sc-dlfnbm czFtKV"
      defaultChecked={false}
      disabled={false}
      id="h14"
      onChange={null}
      type="radio"
      value={3}
    />
    <label
      className="sc-gsTCUz hA-DzkU"
      htmlFor="h14"
    >
      3 +
    </label>
  </div>
</div>
`;
